src/test/resources/purescript_examples/passing/AutoPrelude.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Qualified)
          PureASTWrapperElement(ModuleName)
            PsiElement(proper name)('Debug')
            PsiElement(.)('.')
          PureASTWrapperElement(ModuleName)
            PsiElement(proper name)('Trace')
        PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('f')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('x')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('x')
                PsiElement(whitespace)(' ')
          PureASTWrapperElement(IdentInfix)
            PureASTWrapperElement(Qualified)
              PsiElement(operator)('*')
              PsiElement(whitespace)(' ')
          PureASTWrapperElement(Value)
            PureASTWrapperElement(PrefixValue)
              PureASTWrapperElement(NumericLiteral)
                PsiElement(natural)('10')
                PsiElement(whitespace)('\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('g')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Binder)
          PureASTWrapperElement(VarBinder)
            PsiElement(identifier)('y')
            PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('y')
                PsiElement(whitespace)(' ')
          PureASTWrapperElement(IdentInfix)
            PureASTWrapperElement(Qualified)
              PsiElement(operator)('-')
              PsiElement(whitespace)(' ')
          PureASTWrapperElement(Value)
            PureASTWrapperElement(PrefixValue)
              PureASTWrapperElement(NumericLiteral)
                PsiElement(natural)('10')
                PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ValueDeclaration)
        PsiElement(identifier)('main')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Value)
          PureASTWrapperElement(PrefixValue)
            PureASTWrapperElement(Var)
              PureASTWrapperElement(Qualified)
                PsiElement(identifier)('trace')
                PsiElement(whitespace)(' ')
          PureASTWrapperElement(IdentInfix)
            PureASTWrapperElement(Qualified)
              PsiElement(operator)('$')
              PsiElement(whitespace)(' ')
          PureASTWrapperElement(Value)
            PureASTWrapperElement(PrefixValue)
              PureASTWrapperElement(Var)
                PureASTWrapperElement(Qualified)
                  PsiElement(identifier)('show')
                  PsiElement(whitespace)(' ')
            PureASTWrapperElement(IdentInfix)
              PureASTWrapperElement(Qualified)
                PsiElement(operator)('$')
                PsiElement(whitespace)(' ')
            PureASTWrapperElement(Value)
              PureASTWrapperElement(PrefixValue)
                PureASTWrapperElement(Parens)
                  PsiElement(()('(')
                  PureASTWrapperElement(Value)
                    PureASTWrapperElement(PrefixValue)
                      PureASTWrapperElement(Var)
                        PureASTWrapperElement(Qualified)
                          PsiElement(identifier)('f')
                          PsiElement(whitespace)(' ')
                    PureASTWrapperElement(IdentInfix)
                      PureASTWrapperElement(Qualified)
                        PsiElement(operator)('<<<')
                        PsiElement(whitespace)(' ')
                    PureASTWrapperElement(Value)
                      PureASTWrapperElement(PrefixValue)
                        PureASTWrapperElement(Var)
                          PureASTWrapperElement(Qualified)
                            PsiElement(identifier)('g')
                  PsiElement())(')')
                  PsiElement(whitespace)(' ')
                PureASTWrapperElement(NumericLiteral)
                  PsiElement(natural)('100')
                  PsiElement(whitespace)('\n')
